--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -32,11 +32,11 @@ services:
       - AWS_SECRET_ACCESS_KEY=123secret
       - AWS_ACCESS_KEY_ID=123secret
       - DEBUG=1
-      - DATA_DIR=/tmp/localstack/data
+      - DATA_DIR=/var/lib/localstack/data
     command: sh ./localstack/init-localstack.sh
     volumes:
-      - ./localstack:/docker-entrypoint-initaws.d
-      - ./localstack/storage:/tmp/localstack
+      - ./localstack:/etc/localstack/init/ready.d
+      - ./localstack/storage:/var/lib/localstack
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - service-network
